--- a/react-web/src/index.css
+++ b/react-web/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 @import 'config/theme/css-variables.css';
+@import 'components/icons/style.css';
 
 body {
   margin: 0;
