--- a/react-web/src/config/theme/css-variables.css
+++ b/react-web/src/config/theme/css-variables.css
@@ -4,19 +4,30 @@
   /* Neutral colors */
 
   --color-black: #000000;
+  --color-blackish: #2b2d34;
+  --color-blackish-light: #41444d;
+
+  --color-grayish-dark: #6f6e77;
+  --color-grayish: #86848d;
 
   --color-grayish: #6f6e77;
   --color-grayish-medium: #c8c7cb;
   --color-grayish-light: #eeedef;
   --color-grayish-lightest: #f9f8f9;
 
-  --color-whiteish-light: #ffffff;
+  --color-whiteish: #ffffff;
+  --color-whiteish-light: #dcdbdd;
 
   /* Other Colors */
+  --color-background: #eeedef;
 
+  --color-blue-dark: #097cf6;
   --color-blue: #3396ff;
+  --color-blue-light: #84befd;
+
   --color-green: #5bb98c;
   --color-green-medium: #66bfa0;
+  --color-red: #cd2b31;
 
   /* ##### Borders ####### */
   --border-radius-button: 4px;
