--- a/react-web/src/config/theme/css-variables.css
+++ b/react-web/src/config/theme/css-variables.css
@@ -1,80 +1,50 @@
 :root {
   /* ##### Colors ####### */
-  /* Main Colors */
-  --color-primary-dark: #ff738b;
-  --color-primary: #ff8b9f;
-  --color-primary-light: #ffbbc6;
-  --color-primary-with-opacity: rgba(255, 139, 159, 0.15);
 
   /* Neutral colors */
-  --color-secondary-dark: #72cdca;
-  --color-secondary: #5ddeda;
-  --color-secondary-light: #a7f1ef;
 
-  --color-blackish-dark: #151515;
-  --color-blackish: #2b2b2b;
-  --color-blackish-light: #3d3d3d;
+  --color-black: #000000;
+  --color-blackish: #2b2d34;
+  --color-blackish-light: #41444d;
 
-  --color-grayish-dark: #7d7d7d;
-  --color-grayish: #aaacad;
-  --color-grayish-light: #c2c2c2;
+  --color-grayish-dark: #6f6e77;
+  --color-grayish: #86848d;
 
-  --color-neutral-dark: #f0f0f0;
-  --color-neutral: #f8f8f8;
-  --color-neutral-light: #ffffff;
+  --color-grayish: #6f6e77;
+  --color-grayish-medium: #c8c7cb;
+  --color-grayish-light: #eeedef;
+  --color-grayish-lightest: #f9f8f9;
 
-  --color-success-dark: #5c9a52;
-  --color-success: #2fa968;
-  --color-success-light: #6ae5a4;
+  --color-whiteish: #ffffff;
+  --color-whiteish-light: #dcdbdd;
 
-  --color-danger-dark: #c22929;
-  --color-danger: #ff3636;
-  --color-danger-light: #ff6868;
+  /* Other Colors */
+  --color-background: #eeedef;
+
+  --color-blue-dark: #097cf6;
+  --color-blue: #3396ff;
+  --color-blue-light: #84befd;
+
+  --color-green: #5bb98c;
+  --color-green-medium: #66bfa0;
+  --color-red: #cd2b31;
 
   /* ##### Borders ####### */
-  --border-radius-small: 1px;
-  --border-radius-default: 2px;
-  --border-radius-input: 8px;
-
-  /* Border Colors */
-  --border-primary-dark: 1px solid var(--color-primary-dark);
-  --border-primary: 1px solid var(--color-primary);
-  --border-primary-light: 1px solid var(--color-primary-light);
-
-  --border-secondary-dark: 1px solid var(--color-secondary-dark);
-  --border-secondary: 1px solid var(--color-secondary);
-  --border-secondary-light: 1px solid var(--color-secondary-light);
-
-  /* Border Neutral */
-  --border-blackish-dark: 1px solid var(--color-blackish-dark);
-  --border-blackish: 1px solid var(--color-blackish);
-  --border-blackish-light: 1px solid var(--color-blackish-light);
-
-  --border-grayish-dark: 1px solid var(--color-grayish-dark);
-  --border-grayish: 1px solid var(--color-grayish);
-  --border-grayish-light: 1px solid var(--color-grayish-light);
-
-  --border-neutral-dark: 1px solid var(--color-neutral-dark);
-  --border-neutral: 1px solid var(--color-neutral);
-  --border-neutral-light: 1px solid var(--color-neutral-light);
-
-  /* Border Alert */
-  --border-danger-secondary-dark: 1px solid var(--color-danger-dark);
-  --border-danger-secondary: 1px solid var(--color-danger);
-  --border-danger-secondary-light: 1px solid var(--color-danger-light);
+  --border-radius-button: 4px;
+  --border-radius-default: 8px;
+  --border-radius-modal: 24px;
 
   /**  ##### Typography ####### */
-  --font-family: 'Lato', sans-serif;
+  --font-family: 'Inter';
   --font-style: normal;
 
-  --font-size-12xl: 4rem; /** 64px **/
-  --font-size-10xl: 2.75rem; /** 44px **/
-  --font-size-9xl: 2.5rem; /** 40px **/
   --font-size-7xl: 2rem; /** 32px */
+  --font-size-6xl: 1.875rem; /** 30px */
+  --font-size-5xl: 1.75rem; /** 28px */
   --font-size-4xl: 1.5rem; /**  24px */
   --font-size-3xl: 1.375rem; /**  22px */
   --font-size-2xl: 1.25rem; /**  20px */
-  --font-size-xl: 1.215rem; /**  18px */
+  --font-size-xl: 1.125rem; /**  18px */
   --font-size-lg: 1rem; /**  16px */
   --font-size-normal: 0.875rem; /** 14px */
   --font-size-xsm: 0.75rem; /**  12px */
@@ -86,21 +56,16 @@
   --font-weight-500: 500;
   --font-weight-600: 600;
   --font-weight-700: 700;
-  --font-weight-800: 800;
-  --font-weight-900: 900;
 
-  --line-height-default: 1.215rem; /**  18px */
+  --line-height-default: 1.125rem; /**  18px */
 
-  --line-height-xs: 0.75rem; /**  12px */
   --line-height-sm: 1rem; /**  16px */
   --line-height-lg: 1.25rem; /**  20px */
   --line-height-xl: 1.375rem; /**  22px */
   --line-height-2xl: 1.5rem; /**  24px */
+  --line-height-4xl: 1.75rem; /** 28px */
   --line-height-5xl: 1.875rem; /**  30px */
-  --line-height-7xl: 2.25rem; /**  36px */
-  --line-height-10xl: 2.625rem; /**  42px */
-  --line-height-12xl: 3rem; /**  48px */
-  --line-height-14xl: 3.375rem; /**  54px */
+  --line-height-6xl: 2rem; /**  32px */
 
   --letter-space-default: 0.777778px; /**  18px */
 
@@ -108,5 +73,6 @@
   --letter-space-sm: 0.75px; /**  14px */
   --letter-space-lg: 1px; /**  20px */
 
-  --default-font-color: var(--color-grayish-dark);
+  --primary-font-color: var(--color-grayish);
+  --secondary-font-color: var(--color-black);
 }
