styles: Update input behavior

--- a/react-web/src/index.css
+++ b/react-web/src/index.css
@@ -28,3 +28,19 @@ a {
 * {
   box-sizing: border-box;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+input:focus::placeholder {
+  color: transparent;
+}
