--- a/react-web/src/config/theme/css-variables.css
+++ b/react-web/src/config/theme/css-variables.css
@@ -10,10 +10,10 @@
   --color-grayish-dark: #6f6e77;
   --color-grayish: #86848d;
 
-  --color-grayish: #6f6e77;
   --color-grayish-medium: #c8c7cb;
   --color-grayish-light: #eeedef;
   --color-grayish-lightest: #f9f8f9;
+  --color-blackish-with-opacity: rgba(43, 45, 52, 0.5);
 
   --color-whiteish: #ffffff;
   --color-whiteish-light: #dcdbdd;
