--- a/react-web/src/components/organisms/wallet-input/styles.module.scss
+++ b/react-web/src/components/organisms/wallet-input/styles.module.scss
@@ -46,3 +46,13 @@
     margin-bottom: 26px;
   }
 }
+
+.accountContainer {
+  display: flex;
+  gap: 8px;
+
+  .account {
+    color: var(--color-black);
+    font-weight: var(--font-weight-600);
+  }
+}
