--- a/react-web/src/components/molecules/labeled-input/styles.module.scss
+++ b/react-web/src/components/molecules/labeled-input/styles.module.scss
@@ -1,10 +1,24 @@
 .inputContainer {
+  position: relative;
   display: flex;
   flex-direction: column;
   background-color: var(--color-grayish-lightest);
   padding: 16px;
   height: 116px;
   border-radius: var(--border-radius-default);
+  border: 1px solid transparent;
+
+  .errorLabel {
+    position: absolute;
+    font-weight: var(--font-weight-500);
+    color: var(--color-red);
+    bottom: -24px;
+    right: 20px;
+  }
+}
+
+.error {
+  border: 1px solid var(--color-red);
 }
 
 .input {
@@ -77,4 +91,9 @@
   line-height: var(--line-height-2xl);
   color: var(--color-grayish-dark);
   font-weight: var(--font-weight-500);
+}
+
+.input:disabled,
+.mainLabel:disabled {
+  opacity: 0.4;
 }
