--- a/react-web/src/components/organisms/wallet-input/styles.module.scss
+++ b/react-web/src/components/organisms/wallet-input/styles.module.scss
@@ -42,14 +42,28 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 8px;
+    justify-content: space-between;
+
     margin-bottom: 26px;
+
+    .insideContent {
+      display: flex;
+      flex-direction: row;
+      gap: 8px;
+
+      .submittedTxn {
+        color: var(--color-green);
+        font-weight: var(--font-weight-600);
+        text-decoration-line: underline;
+        font-size: var(--font-size-lg);
+      }
+    }
   }
 }
 
 .accountContainer {
   display: flex;
-  gap: 8px;
+  gap: 6px;
 
   .account {
     color: var(--color-black);
