--- a/react-web/src/config/theme/css-variables.css
+++ b/react-web/src/config/theme/css-variables.css
@@ -10,17 +10,16 @@
   --color-grayish-dark: #6f6e77;
   --color-grayish: #86848d;
 
-  --color-grayish: #6f6e77;
   --color-grayish-medium: #c8c7cb;
   --color-grayish-light: #eeedef;
   --color-grayish-lightest: #f9f8f9;
+  --color-blackish-with-opacity: rgba(43, 45, 52, 0.5);
 
   --color-whiteish: #ffffff;
   --color-whiteish-light: #dcdbdd;
 
   /* Other Colors */
   --color-background: #eeedef;
-
   --color-blue-dark: #097cf6;
   --color-blue: #3396ff;
   --color-blue-light: #84befd;
