--- a/react-web/src/components/templates/home/styles.module.scss
+++ b/react-web/src/components/templates/home/styles.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+  height: 100vh;
 }
 
 .container {
@@ -13,6 +13,9 @@
   border-radius: 12px;
   background-color: var(--color-whiteish);
   gap: 28px;
+  position: relative;
+  z-index: 2;
+  box-shadow: 0px 10px 23px rgb(0 0 0 / 23%), 0px 4px 10px rgb(0 0 0 / 6%);
 }
 
 .titleContainer {
@@ -49,4 +52,13 @@
 
 .formRow {
   margin-bottom: 32px;
+}
+
+.bgMask {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  background: linear-gradient(180deg, #ffffff 30%, #6a87d9 100%);
 }
